tests/specs/eval/error_and_exit/unhandled_rejection.out
error: Uncaught (in promise) Error: rejected
Promise.reject(new Error('rejected'))
               ^
    at file://[WILDCARD]$deno$eval.mts:1:16
